--- a/PMTC/Contact-Us.html
+++ b/PMTC/Contact-Us.html
@@ -1,195 +1,26 @@
-<head><base href="http://h.churchapp.mobi/modules/click_to_call/click_to_call.php?fid=3443513">
+<html>
+<body class="ui-mobile-viewport nd2-ready call_div ui-overlay-a" style="">
+	<div data-role="page" id="bgimg" class="ui-page ui-page-theme-a ui-page-header-fixed ui-page-active ui-page-footer-fixed" data-url="bgimg" tabindex="0" style="padding-top: 64px; max-width: 1366px; width: 452.539px; background-position: 164.234px 0px; background-size: 453px 662px; background-image: url(&quot;https://origin-files.infinitemonkeys.mobi/userfiles/102090429-3443513-background.jpg&quot;); min-height: 598px;">
+			<div data-role="header" data-position="fixed" role="banner" class="ui-header ui-header-fixed slidedown ui-bar-inherit" style="max-width: 1366px; width: 452.539px; left: auto; right: auto;">
+			<h1 class="ui-title" id="title" style="text-align:center !important;" role="heading" aria-level="1">Call PMTC</h1>
+				 
+					<a href="/index.php?app=pmtc" rel="external" class="ui-btn-right ui-btn waves-effect waves-button" data-role="button" role="button">
+						<i class="fa fa-home"></i>
+					</a> 
+						</div>
+		<div role="main" class="ui-content wow fadeIn" data-wow-delay="0.2s" data-inset="false" style="height: 598px; background-position: 164.234px 0px; background-size: 453px 662px;">
+			<img src="https://origin-files.infinitemonkeys.mobi/userfiles/102090429-3443513-icon.png">
+			<h1 class="head col_title">PMTC</h1>
+			<ul data-role="listview" id="list" data-icon="false" class="modalScrollerContent ui-listview">
+				<li class="contact_li ui-li-divider ui-bar-inherit ui-first-child ui-last-child" data-role="list-divider" role="heading"> <div class="row"><div class="col-md-12"><a href="tel:215-542-6851" target="_self" class="col_text ui-btn ui-btn-raised waves-effect waves-button"><i class="fa fa-phone"></i>215-542-6851</a> </div></div></li>			</ul>
+		</div>
+		<!--   footer   -->
+<div data-role="footer" data-id="myfooter" id="footer" data-tap-toggle="false" data-position="fixed" class="ui-bar ui-footer ui-bar-inherit ui-footer-fixed slideup" style="height: 0px !important; width: 452.539px; max-width: 1366px;" role="contentinfo">
+<script src="../../js/analytic_tracing.js"></script>
+</div>
+<!-- /footer -->
+	</div>
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"2b518fbf6b","applicationID":"7123809","transactionName":"MlUBZUACDUZWAUAMXAsfNkNbTA5aUxdYAEBKUw9YUQg8QVg9VwRfCR8AXVsACGpDDWsGUglcTUFaEw==","queueTime":0,"applicationTime":2,"ttGuid":"","agentToken":"","atts":"HhICEwgYHkg=","errorBeacon":"bam.nr-data.net","agent":""}</script>
 
-       	<meta charset="utf-8">
-<script type="text/javascript" src="https://bam.nr-data.net/1/2b518fbf6b?a=7123809&amp;v=1071.385e752&amp;to=MlUBZUACDUZWAUAMXAsfNkNbTA5aUxdYAEBKUw9YUQg8QVg9VwRfCR8AXVsACGpDDWsGUglcTUFaEw%3D%3D&amp;rst=3502&amp;ref=http://h.churchapp.mobi/modules/click_to_call/click_to_call.php&amp;ap=2&amp;be=3115&amp;fe=3483&amp;dc=3259&amp;perf=%7B%22timing%22:%7B%22of%22:1520700626447,%22n%22:0,%22u%22:3082,%22ue%22:3082,%22f%22:26,%22dn%22:26,%22dne%22:26,%22c%22:26,%22ce%22:26,%22rq%22:32,%22rp%22:3054,%22rpe%22:3155,%22dl%22:3088,%22di%22:3259,%22ds%22:3259,%22de%22:3299,%22dc%22:3482,%22l%22:3482,%22le%22:3484%7D,%22navigation%22:%7B%7D%7D&amp;at=HhICEwgYHkg%3D&amp;jsonp=NREUM.setToken"></script><script src="https://js-agent.newrelic.com/nr-1071.min.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="application/javascript">
-
-//added to only show console info on local-hosts
-var DEBUG = (location.hostname.search("test") > -1 || location.hostname.search("local") > -1 || location.hostname.search("staging") > -1) ? true : false;
-// DEBUG = true;	//turn off debug hiding...
-if(!DEBUG){
-    if(!window.console) window.console = {};
-    var methods = ["log", "debug", "warn", "info"];
-    for(var i=0;i<methods.length;i++){
-    	console[methods[i]] = function(){};
-    }
-}
-
-	//global variable definitions that are convenient to have on each page
-	var preview = "0";
-	if(preview==1) console.log("*** PREVIEW ***");
-	
-	console.log("using vars copy: pmtc-vars - cached");
-	var generated = "2017-12-10 14:08:54";
-	var config_file_url = "https://origin-files.infinitemonkeys.mobi/userfiles/pmtc-var2.json";
-	console.log("config file: " + config_file_url + " - - " + generated);
-	console.log("last fetched: 1520698876");
-
-	var app_name = "pmtc";
-	var app_id = "102090429";
-	var app_userID = "0eb7b5aa-bebc-4531-a427-2f004192c006";
-	console.log("app_userID: " + app_userID);
-	var app_copy = "cached";
-
-	var published = true;
-	var html_version = "1";
-	
-	var app_title = "The PMTC App";
-	var show_title = "image";
-	var col_back = "#fff";
-	var col_text = "#11076f";
-	var col_title = "#42393d";
-	var bg_opacity = "0.00";
-	var icon_scale = "1.0";
-	
-	var header_file = "102090429-title.png";
-	
-	var ads_on = "0";
-	
-	var fid = "3443513";
-	var home_link = "/index.php?app=pmtc";
-	
-	var userfiles_path = "https://origin-files.infinitemonkeys.mobi/userfiles/";
-	var publish_type = "6";
-	
-	var menu_style = "grid";
-	
-</script> 
-	<!-- //ios7 app-view link overrides -->
-	<script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
-<meta name="viewport" content="initial-scale=1.0,maximum-scale=1, user-scalable=no">
-
-       	<!-- meta tags -->
-	 	<meta charset="utf-8">
-        <meta name="description" content="The PMTC app is an app for the Philadelphia Mar Thoma Church.">
-        <meta name="keywords" content="church,mar thoma church,philadelphia,philadelphia mar thoma church,philly,pmtc,the philadelphia mar thoma church">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(){}function o(e,t,n){return function(){return i(e,[f.now()].concat(u(arguments)),t?null:this,n),t?void 0:this}}var i=e("handle"),a=e(2),u=e(3),c=e("ee").get("tracer"),f=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],d="api-",l=d+"ixn-";a(p,function(e,t){s[t]=o(d+t,!0,"api")}),s.addPageAction=o(d+"addPageAction",!0),s.setCurrentRouteName=o(d+"routeName",!0),t.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,t){var n={},r=this,o="function"==typeof t;return i(l+"tracer",[f.now(),e,n],r),function(){if(c.emit((o?"":"no-")+"fn-start",[f.now(),r,o],n),o)try{return t.apply(this,arguments)}catch(e){throw c.emit("fn-err",[arguments,this,e],n),e}finally{c.emit("fn-end",[f.now()],n)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,t){m[t]=o(l+t)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,f.now()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(o<0?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],4:[function(e,t,n){t.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?c(e,u,i):i()}function n(n,r,o,i){if(!d.aborted||i){e&&e(n,r,o);for(var a=t(o),u=m(n),c=u.length,f=0;f<c;f++)u[f].apply(a,r);var p=s[y[n]];return p&&p.push([b,n,r,a]),a}}function l(e,t){v[e]=m(e).concat(t)}function m(e){return v[e]||[]}function w(e){return p[e]=p[e]||o(n)}function g(e,t){f(e,function(e,n){t=t||"feature",y[n]=t,t in s||(s[t]=[])})}var v={},y={},b={on:l,emit:n,get:w,listeners:m,context:t,buffer:g,abort:a,aborted:!1};return b}function i(){return new r}function a(){(s.api||s.feature)&&(d.aborted=!0,s=d.backlog={})}var u="nr@context",c=e("gos"),f=e(2),s={},p={},d=t.exports=o();d.backlog=s},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!x++){var e=h.info=NREUM.info,t=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&t))return s.abort();f(y,function(t,n){e[t]||(e[t]=n)}),c("mark",["onload",a()+h.offset],null,"api");var n=d.createElement("script");n.src="https://"+e.agent,t.parentNode.insertBefore(n,t)}}function o(){"complete"===d.readyState&&i()}function i(){c("mark",["domContent",a()+h.offset],null,"api")}function a(){return E.exists&&performance.now?Math.round(performance.now()):(u=Math.max((new Date).getTime(),u))-h.offset}var u=(new Date).getTime(),c=e("handle"),f=e(2),s=e("ee"),p=window,d=p.document,l="addEventListener",m="attachEvent",w=p.XMLHttpRequest,g=w&&w.prototype;NREUM.o={ST:setTimeout,SI:p.setImmediate,CT:clearTimeout,XHR:w,REQ:p.Request,EV:p.Event,PR:p.Promise,MO:p.MutationObserver};var v=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1071.min.js"},b=w&&g&&g[l]&&!/CriOS/.test(navigator.userAgent),h=t.exports={offset:u,now:a,origin:v,features:{},xhrWrappable:b};e(1),d[l]?(d[l]("DOMContentLoaded",i,!1),p[l]("load",r,!1)):(d[m]("onreadystatechange",o),p[m]("onload",r)),c("mark",["firstbyte",u],null,"api");var x=0,E=e(4)},{}]},{},["loader"]);</script>
-
-		<!-- title -->
-        <title>Call PMTC</title>
-
-		<!-- CSS Reference -->
-        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css">
-		<!--- new css -->
-		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="../../theme/vendor/waves/waves.min.css">
-		<link rel="stylesheet" href="../../theme/css/nativedroid2.css">
-		<link rel="stylesheet" href="../../theme/css/theme_style.css">
-
-		<!--- JS Refereces --->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
-		<script src="../../js/functions.js"></script>
-		<script src="../../js/functions_format.js"></script>
-		<!-- <script src="../../js/social.js"></script> --->
-
-
-
-		<!--- new js --->
-		<script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-		<script src="../../theme/vendor/waves/waves.min.js"></script>
-		<script src="../../theme/js/nativedroid2.js"></script>
-		<script src="../../theme/js/nd2settings.js"></script>
-		<!-- php-based style overrides -->
-		<style>
-	body, html, p, a:not(.ui-btn), li .rowDescription{
-		color:#11076f !important;
-	}
-		.ui-mobile .ui-page {
-	    padding-bottom: 0px !important;
-	}
-	
-	/*.dataList li a{ 	color:#11076f !important;  text-shadow: none !important;}*/
-	.dataList li, .nd2-card{
-		background-color:rgb(255,255,255) !important;
-		border-color:rgb(17,7,111) !important;
-		color:#11076f !important;
-	}
-
-	.rowTitle, .ui-li-heading, .card-primary-title, .card-primary-title a, .card-subtitle{
-		color:#42393d !important;
-	}
-
-	a,.default_btn{
-		color:#42393d !important;
-	}
-
-	.ui-header, .ui-footer, #leftpanel.ui-panel.ui-panel-open{
-		background-color:#fff !important;
-		/*background-color:#ddd !important;*/
-		color:#42393d !important;
-		/*color:#333 !important;*/
-	}
-	.custom_select option{
-		color:#42393d !important;
-		}
-	.ui-header > .ui-btn {
-		color:#42393d !important;
-	}
-
-	.col_title {
-		color: #42393d !important;
-	}
-	.module_custom_li > li:first-child
-	{border-color:#42393d !important;
-	border-top:1px solid
-	}
-	.col_text {
-		color: #11076f !important;
-	}
-	.col_back {
-		background-color:rgba(255,255,255,1) !important;
-	}
-	.col_back_without_opacity {
-		background-color:rgb(255,255,255) !important;
-	}
-	.col_back_without_opacity li a {
-		border-color:rgba(17,7,111,0.5) !important;
-	}
-	.classifiedList li a.ui-btn{border-color:#11076f !important;}
-	.direction_address{
-		background-color:rgb(255,255,255) !important;
-		text-shadow: none !important;
-		color:#42393d !important;
-	}
-	.openclose { color:#11076f !important; }
-
-	#html_content p{color:#000 !important;}
-
-	.dataList li a.more_but{
-		color:#42393d !important;
-		}
-
-	.ui-input-text.ui-focus::after, .ui-input-search.ui-focus::after{ background-color : #42393d; }
-	.licustombible li a{color:#11076f !important;}
-	.ui-content .licustombible .ui-li-divider{border-bottom:1px solid;}
-	.card-subtitle{color:#11076f !important;}
-	#ad_type-button span{
-		color:#42393d;
-	}
-
-</style>
-
-		<script type="application/javascript">
-		//added by David Hoare for frame background formatting
-		function hexToRGB(h){
-			var h = (h.charAt(0)=="#") ? h.substring(1,7):h;
-			if ( h.length == 3 ) {
-				h = h.substr(0,1) + h.substr(0,1) + h.substr(1,2) + h.substr(1,2) + h.substr(2,3) + h.substr(2,3);
-			}
-			var rgb = parseInt(h.substring(0,2),16);
-			rgb += "," + parseInt(h.substring(2,4),16);
-			rgb += "," + parseInt(h.substring(4,6),16);
-			return rgb
-		}
-		//end added
-
-
-		$(document).ready(function(){
-		   // ALL page logic here....
-
-			var contact = jQuery.parseJSON("[{\"name\":\"PMTC\",\"address\":null,\"phone\":\"215-542-6851\",\"email\":null}]");
-			window.console && console.log(contact);
-			$('#bgimg').css("background-image", "url(https://origin-files.infinitemonkeys.mobi/userfiles/102090429-3443513-background.jpg)");
-		});
-		</script>
-</head>
+<div class="ui-loader ui-corner-all ui-body-a ui-loader-default"><span class="ui-icon-loading"></span><h1>loading</h1></div></body>
+</html>
