--- a/Locker/OneLocker.html
+++ b/Locker/OneLocker.html
@@ -177,7 +177,7 @@ h4{
 </style>
 </head>
 <body id="body">
-<script src="https://cdn.rawgit.com/shwin320/OneLocker/fbb2189a/OneLocker.js"></script>
+<script src="https://rawgit.com/shwin320/OneLocker/master/OneLocker.js"></script>
 <p>Don't have an account, yet? <a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_blank" class="link">Sign-up today!</a></p>
 <p style="margin-top: -15px">Questions? Raise your hand and ask <a href="mailto:shwin320@gmail.com" target="_blank" class="link">Ashwin Thomas</a>, OneLocker developer.</p>
 <br><br>
