--- a/OneLocker/Preview.html
+++ b/OneLocker/Preview.html
@@ -4,7 +4,7 @@
 <link rel="shortcut icon" href="https://lh3.googleusercontent.com/WGc0I0iz5xeLBi6TpDQ1JwLMlxK13bDNlFqjmBtrw9oTgp1wWswUUuc2Zdbo0qZWjqXdXW-sedupQ6rBSbTkr_oyer5qOkPY7697fWgCUmYBmp7hhTlh8C6DYQJEswPbuEia6y2r3JXminWgUeYGWjTdBuezhN0JTPYkS7nDEvfsQCFIr0GAjV0QF4Lpb0mRpOGCQ9Ph1hJwwhAhZune_Hmi5zfnIAr99paHtiERWqaljtcfYuAahU1Ui8yXAPa5uRauHHflaSOwBUb_oG0icgdKXNbD-eoULkFD644UMSQ4Ez-mzE7x05ICBr8PZBAsiKVFRHZW8c_YTaWmMKp6TR-iZnW99NFhvTdFVHylWESXJYgMPIED7VLRIK0vT3TcTuLaBS_g-kW9dAhjgdIXRXCVfR-6c0wJZw_bj-e6QPaIYgStn4xcv9eEUADnzHdPTe8ESMTHRfKcb6KjEJaUlTdykwZXUV7RaF93w14LqW1wXlgrxZtXLeAvrIRwpvwKPuxOiKsGjSVVfn6RqgiD7W_1hNZIAT1DkS0k2aWRs7uPs25UGbn9XdR6AmpoMGVs7511bcLbqzw4PiDMizj3E1a6qYL8_adb2PhtuEclOw=s16-no" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/shwin320/OneLocker-School/master/OneLocker.css">
 <body id="body">
-<script src="https://cdn.rawgit.com/shwin320/OneLocker-School/8e62be24/OneLocker%20-%20Preview.js"></script>
+<script src="https://rawgit.com/shwin320/OneLocker-School/master/OneLocker%20-%20Preview.js"></script>
 <p>Don't have an account, yet? <a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_blank" class="link">Sign-up today!</a></p>
 <p style="margin-top: -15px">Questions? Raise your hand and ask <a href="mailto:shwin320@gmail.com" target="_blank" class="link">Ashwin Thomas</a>, OneLocker developer.</p>
 <br><br>
