Linked to A+School.css

--- a/Locker/A+ School.html
+++ b/Locker/A+ School.html
@@ -2,70 +2,7 @@
 <head>
 <title>A+ School</title>
 <link rel="shortcut icon" href="https://lh3.googleusercontent.com/47ImNMxo6A7JCSs0In75f3b2vMKtKIHDyORvbHpqCpYzTSVUohsRI4X4d3G8--7KvRE7oCqIYx_H-5W5ZYSFJ34vr5QcsTeyUIllmmYCUNr9daiL8FpGZdyGVHhMQ0ASn-NEKLdtgSkB3t_Cclrwjr1NQ6Q2V2nTarzCitwxdhGeiqakTpfXaAaYJSgJZlsp0xhoODDbzM5xVquQMQqF4yXSPAFLDsSaevU8vy0acWRzmbVn16JKgY2r_yhfMHdo_aYa1d8z8KPEUBwll9x3NZ35CF8tvpxwDyMTKMicbCnZhF2dR8HGLvpQZ4icS87w3xAPqKzPtw1KHfxg59TLPXwgoIWyaUd7fYFOsXR9BSFAQA49ycgDkC0O371H67zG6pMzBCP9Vr6etszKyZzPz0Wl28tEF4fiuxjluh3-TQDA4OHu3xYRKW9EvMmFCCL2--7b1HvoLRJj-KBC_Ka3ECDvpjcIGFNxXxOVrh03KiIVaWEpxKl4RbVwDgKGJTxe8S9MEVks71yxUib0W13MRLFwdtJOlNGXt8vstLi40WCb9tZbWoB-nF91nSM3m7B19gtY1ZULl1PG80ISHVgcvjcqARe0oAs6zoCeytksvmdlC74Z7FYilKopaTDOv_RJ5sK2MnuZkWmAjqFAyz2pPbFzepdkZmMPAIc=s16-no" type="image/x-icon">
-<style>
-h1{
-font-family: Arial;
-color: Red;
-text-align: Center;
-font-size: 80px;
-}
-img{
-display: block;
-margin: 0 auto;
-}
-#logo{
-padding-top: 5px;
-padding-bottom: 50px;
-opacity: 1;
-filter: alpha(opacity=50);
-}
-h3{
-padding-top: -10px;
-margin-top: -70px;
-font-family: Arial;
-text-align: Center;
-}
-h2{
-text-align: Center;
-font-family: Arial;
-font-size: 35px
-}
-#realize{
-padding-top: 15px;
-padding-left: 60px;
-}
-.nlast{
-padding-bottom: 30px;
-}
-#t{
-text-align: Left;
-}
-a:hover{
-background-color: rgb(237, 243, 255);
-opacity: 0.5;
-}
-img:hover {
-opacity: 0.5;
-filter: alpha(opacity=50);
-}
-.tab{
-font-family: Arial;
-font-size: 15px;
-color: rgb(51,102,187);
-text-decoration: none;
-}
-.tab:hover{
-text-decoration: underline;
-}
-.tot{
-text-decoration: none;
-color: black;
-background-color: transparent;
-}
-p{
-text-align: Center;
-}
-</style>
+<link rel = "stylesheet" href = "css/A+School.css" type = "text/css">
 </head>
 <body>
 <h1>A+ School</h1>
