--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Ashwin's Webpage</title>
+        <link rel="shortcut icon" href="https://lh3.googleusercontent.com/VGij4GtbIB7iDr6nNMIVMoHtYRgjDdIakuKXH14OYYtmVeJbYCvhPFsV3QMZLioYlixSEUHN__pHJ8YGme67fTD_P7kjmOmLJegfGUnJ2NPqGfz5YGpSJipiXjnnu6AgncBEWkayhO8Gqw1b0oAOzKhV_xqRe8eg3hLgHgKJ6GqoEWyBJEG2T_6E0S9NujIVW7sN5uojms-3sIYC2nnFBwU5IV1sG0oOi2tNb5vdEKWeNBoWStEwBYrB9LMOuTtkEWvKnzvOLe3bqD9Kah-0SQm20XvMDeML8pZr1MTZBhxZqW9SKnaEzy2j7MtGkmFSGJI0QuYSQSuXDW_zhTjd20oAzdI9mp2tlEEWZR9DXGlYUDIBie7JF42Awn4MIuOPpiQ5aGFbBPodb6qZpXyjztygFsUW4Lv19U2XV0jyn-9HEEZNKH_t-zRNyxqYixuYJiYYXVj-loJXc8LAuesdEBUrFgu05yUCK9h7nKsKJ4UZwcZYxL3p9FN8T4voJAsNqQI44F_BtdU1BJr9NaOeWYK_qRew8Ei42ZLuWgZzkSTChsM7HFSW5_SSwYnCCN-VOqAsiQteWLxudcyMFjDK31-1TR2h_zDUMzHEkwcPv7GBdmyJ_IMZ0oee1cNgugs=s16-no" type="image/x-icon">
         <style>
             
             h1{
@@ -61,24 +62,22 @@
 
 </script>
 <h1>Ashwin's  Webpage</h1>
-<br><br>
+<br>
 <h2>Links:</h2>
 <a href="#Mini Bio">Mini Bio</a>
-<br><br>
+<br>
 <a href="#Bookmarks">Websites</a>
-<br><br>
+<br>
 <a href="#Contact Info">Contact Info</a>
-<br><br>
+<br>
 <ul id="Mini Bio">
 <h2>Mini Bio:</h2>
-<br><br>
 <br><br>
 <p>Ashwin Thomas was born on Palm Sunday. He's the oldest child in his family. He likes technology. He's really smart, and in his school's AT class. He learns coding on Khan Academy. He loves chocolate.</p>
 </ul>
 <br><br>
 <ul id="Bookmarks">
 <h2>Websites:</h2>
-<br><br>
 <br><br>
 <a href="https://shwin320.github.io/Locker">Locker</a><br>
 <a style="text-indent: 50px;" href="https://shwin320.github.io/Locker/Virtual-Locker">Virtual Locker</a><br>
@@ -90,7 +89,6 @@
         <br><br>
         <ul id="Contact Info">
         <h2>Contact info</h2>
-        <br><br>
         <br><br>
         <a href="mailto:shwin320@gmail.com">shwin320@gmail.com</a>
         <br>
