--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <ul id="Mini Bio">
 <h2>Mini Bio:</h2>
 <br><br>
-<p>Ashwin Thomas was born on Palm Sunday. He's the oldest child in his family. He likes technology. He's really smart, and in his school's AT class. He learns coding on Khan Academy. He loves chocolate.</p>
+<p>Ashwin Thomas was born on Palm Sunday. He's the oldest child in his family. He likes technology. He's really smart, and in his school's AT class. He learned coding on Khan Academy.</p>
 </ul>
 <br><br>
 <ul id="Bookmarks">
@@ -83,6 +83,7 @@
 <a style="text-indent: 50px;" href="https://shwin320.github.io/Locker/Virtual-Locker">Virtual Locker</a><br>
 <a style="text-indent: 100px;" href="https://shwin320.github.io/Locker/School">A+ School</a><br>
 <a style="text-indent: 100px;" href="https://shwin320.github.io/Locker/Media">Thomas Media Center</a><br>
+<a style="text-indent: 50px;" href="https://shwin320.github.io/Locker/OneLocker">OneLocker (on Locker)</a><br>
 <a style="text-indent: 50px;" href="https://shwin320.github.io/OneLocker">OneLocker</a>
 <a style="text-indent: 100px;" href="https://shwin320.github.io/OneLocker/School">OneLocker School</a>
 <a style="text-indent: 100px;" href="https://shwin320.github.io/OneLocker/Preview">OneLocker (Preview)</a>
