--- a/Locker/Virtual-Locker/index.html
+++ b/Locker/Virtual-Locker/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Virtual Locker</title>
-<link rel="shortcut icon" href="C:\Users\shwin\OneDrive\Pictures\Virtual Locker Favicon\favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://lh3.googleusercontent.com/DC0UIJvVTO0CI_s7TylutI8RTcDlISDn5VWdh5f5h8FZSThqpX7Jr4jB40GoPQrTejJQZ3dB6KDGCpfclNBpgYR88tXGq7Nngpe9Ie6se6OGvQrVzGfwRBfEFcNVyUSeapl2a_Yq3IuXtYwz8uFGPLesQ-IlrJimUIfmdd-8ibK9VhJNVVpTcjeUmvCaMmNjN_GvEaRCb6tWbAPLM9NecJl1gPnO4vqQzRAM8KAkoPBXglcZAzFKIaeii0tfoj3gKj4lGwKHVGmIA_TgeeBNTAcs5HRe20eDC-qKqWrZpRiRGLKCu-Yz9yZd-McXQUcpFX4LecvraduLcQYLXRMrUbOg1mqcxu2W7M4od7wAHEcC_wK6p4_ZkQfI22ycvK6xm6EAxTAM7-Y5igPL7brfJFmbRfrrvKU-fhGgfwYP35J8lJoymZuP_s-dB-X0iQD_dz2hIwgDlbpOHSHzNHrs-wvj3aR2XnVvDBH4bpLnZoc-KW1uCbb6_J8jrqxOL8Mpce5mjGuFw5z8jghUCIDHW9n-go9-h-AfYz2Kkky0awqqdFhtYQeHHzlc5P7BTekZP66zgyP5X7hWPoDBZvXktHkYKNo4yH2ClH4wN1UqS-dgEIKVSpTkyEspTGNQqJZ_s2VmOjvUMCgM9DZu8gx6Oadn3X4WUTjNF8cQsoSWkZFFM5jqyWmW7o01=s16-no" type="image/x-icon">
 <style>
 h1{
 text-align: Center;
