Update Thomas Media Center.html

--- a/Locker/Virtual-Locker/Thomas Media Center.html
+++ b/Locker/Virtual-Locker/Thomas Media Center.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Thomas Media Center</title>
-<link rel="shortcut icon" href="C:\Users\shwin\OneDrive\Pictures\Media Center Favicon\favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://lh3.googleusercontent.com/P_WQflj8ExMUzcI76FWj_t_Q1rAVHhHT3s8cVFB9WE74lc9uz4Z-3awsqEaBSeHTWYmV7NXosgV96NuU1KAz_Icf6JUglBsn1XuTX5kJi0pAiY8GJksSqLciOkGrJcNXKjPkXIaDa8XIzSQy9xryuRfBiOrQxgpq5C7p4zK-pHx6W1SQKpBdKs8WfsZBaz8AIy5tdHeM0k1XhPADixoGQSoQSD2h7C4kAT1Hg3T0qYGnn1Rcdr1Vd_WriCGrd3CYJLj1pxDVqzSeV11bpyGsTMctlbS4M0bZ7Xoml57jNkChMZIy0_NlKhCj4ji5H_3Yz-eFGay9dFgVq7h5DH1_w1hJAVBkKzk5Fvp4wu6OVYTEw48Yh88iKia1aPldeItkgcr71UnaxfgYTrxGEVBjOURJo48zrPUj3c4cJcdmBgeBBtg_-s6VGkJ3oLjAwQWl9mr-ajOacg5IxNfJKu34nTjyCkpxHtlpt__EsDvYgzlFWz1EDWnoMqLotJcibg7V4VX4ZNS9wErtQ_Ty47V31h_ed1hEEwVcHJ_jV1McakV5ZC0B8Y8VQNOZfVJlPfVZEdCm1G0uLuZUeYkbvOOZjyVd7aS9A_9tOPP8mbcuBULEFpzRA6EYi1Vcri6YrSk=s16-no" type="image/x-icon">
 <style>
 h1{
     font-family:Fantasy;
