--- a/Locker/OneLocker.html
+++ b/Locker/OneLocker.html
@@ -2,182 +2,10 @@
 <head>
 <title>OneLocker</title>
 <link rel="shortcut icon" href="https://lh4.googleusercontent.com/WGc0I0iz5xeLBi6TpDQ1JwLMlxK13bDNlFqjmBtrw9oTgp1wWswUUuc2Zdbo0qZWjqXdXW-sedupQ6rBSbTkr_oyer5qOkPY7697fWgCUmYBmp7hhTlh8C6DYQJEswPbuEia6y2r3JXminWgUeYGWjTdBuezhN0JTPYkS7nDEvfsQCFIr0GAjV0QF4Lpb0mRpOGCQ9Ph1hJwwhAhZune_Hmi5zfnIAr99paHtiERWqaljtcfYuAahU1Ui8yXAPa5uRauHHflaSOwBUb_oG0icgdKXNbD-eoULkFD644UMSQ4Ez-mzE7x05ICBr8PZBAsiKVFRHZW8c_YTaWmMKp6TR-iZnW99NFhvTdFVHylWESXJYgMPIED7VLRIK0vT3TcTuLaBS_g-kW9dAhjgdIXRXCVfR-6c0wJZw_bj-e6QPaIYgStn4xcv9eEUADnzHdPTe8ESMTHRfKcb6KjEJaUlTdykwZXUV7RaF93w14LqW1wXlgrxZtXLeAvrIRwpvwKPuxOiKsGjSVVfn6RqgiD7W_1hNZIAT1DkS0k2aWRs7uPs25UGbn9XdR6AmpoMGVs7511bcLbqzw4PiDMizj3E1a6qYL8_adb2PhtuEclOw=s16-no" type="image/x-icon">
-<style>
-p{
-	font-family: Arial;
-	font-size: 16px;
-}
-a{
-	text-decoration: none;
-	color: rgb(0, 195, 255);
-}
-a:hover{
-	opacity: 0.5;
-	text-decoration: underline;
-}
-h1{
-	color: rgb(0, 153, 255);
-	font-family: Arial;
-	text-align: center;
-	font-size: 100px;
-	margin-top: -10px;
-}
-h2{
-	color: rgb(0, 153, 255);
-	font-family: Arial;
-	text-align: center;
-	font-size: 45px;
-	margin-top: -90px;
-}
-img{
-	display: block;
-	margin: 0 auto;
-}
-#submit{
-	background-color: blue;
-	border: none;
-	color: white;
-	padding: 10px 27px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 20px;
-	margin-top: 10px;
-}
-.text{
-	padding: 5px 10px;
-}
-#try_again{
-	text-align: Center;
-	font-size: 50px;
-	padding-top: 0px;
-	margin-top: -70px;
-	display: block;
-	margin: 0 auto;
-	background-color: white;
-	border: 2px solid #ffffff;
-	font-family: Arial;
-}
-#try_again2{
-	text-align: Center;
-	font-size: 50px;
-	padding-top: 0px;
-	margin-top: -70px;
-	display: block;
-	margin: 0 auto;
-	background-color: white;
-	border: 2px solid #ffffff;
-	font-family: Arial;
-}
-img:hover{
-	opacity: 0.5;
-}
-#unhover:hover{
-	opacity: 1;
-}
-#nonhover:hover{
-	opacity: 1;
-}
-div {
-    text-align: center;
-	margin-top: -45;
-}
-div img {
-    display: inline-block;	
-}
-div:after {
-    content: '';
-    display: inline-block;
-    width: 100%;
-}
-#h{
-	margin-right: 50px;
-}
-#s{
-	margin-left: 50px;
-}
-#select{
-	font-family: Arial;
-}
-#logout{
-	background-color: white;
-	border: 2px solid #ffffff;
-	font-family: Arial;
-	font-size: 100%;
-}
-h3{
-	text-align: Left;
-	font-family: Arial;
-	color: black;
-	font-size: 27px;
-}
-h4{
-	text-align: Left;
-	font-family:  Arial;;
-	color: black;
-	font-size: 20px;
-}
-#home_up{
-	margin-top: -30px;
-}
-.links{
-	text-align: justify;
-}
-.linkmenu{
-	margin-top: -25px;
-	outline: rgb(0, 153, 255) solid medium;
-	padding: 0px 5px 5px 5px;
-	margin-bottom: -37px;
-}
-.linkmenu h4{
-	padding-top: 7px;
-	margin-top: 40px;
-}
-.linkmenu img{
-	margin-top: 25px;
-}
-#school_content h2{
-	color: Black;
-	text-align: Left;
-	font-size: 25px;
-	margin-bottom: -7px;
-}
-#school_content p{
-	font-size: 18px;
-	text-align: Left;
-	margin-bottom: -20px;
-}
-#school_content a:hover{
-	opacity: 0.5;
-	text-decoration: underline;
-}
-#home_content h2{
-	color: Black;
-	text-align: Left;
-	font-size: 25px;
-	margin-bottom: -7px;
-}
-#home_content p{
-	font-size: 18px;
-	text-align: Left;
-	margin-bottom: -20px;
-}
-#home_content a:hover{
-	opacity: 0.5;
-	text-decoration: underline;
-}
-.linkmenu p{
-	text-align: Left;
-	margin-top: -30px;
-}
-.content{
-	margin-top: 25px;
-	margin-bottom: 35px;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/shwin320/OneLocker/master/OneLocker.css">
 </head>
 <body id="body">
-<script src="https://rawgit.com/shwin320/OneLocker/master/OneLocker.js"></script>
+<script src="https://raw.githubusercontent.com/shwin320/OneLocker/master/OneLocker.js"></script>
 <p>Don't have an account, yet? <a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_blank" class="link">Sign-up today!</a></p>
 <p style="margin-top: -15px">Questions? Raise your hand and ask <a href="mailto:shwin320@gmail.com" target="_blank" class="link">Ashwin Thomas</a>, OneLocker developer.</p>
 <br><br>
