--- a/TechHelp/index.html
+++ b/TechHelp/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>TechHelp</title>
-<link rel="shortcut icon" href="https://raw.githubusercontent.com/shwin320/TechHelp/master/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/TechHelp/TechHelp.css">
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/TechHelp@9a77b9f/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/TechHelp@cdc3a17/TechHelp.css">
 </head>
 <body>
 <h1>TechHelp</h1>
