--- a/TechHelp/index.html
+++ b/TechHelp/index.html
@@ -10,11 +10,9 @@
 <h2>For when you need some tech help.</h2>
 <br><br><br><br>
 <div>
-<a href="https://shwin320.github.io/TechHelp/Galaxy_Watch" target="_blank"><img src="https://i5.walmartimages.com/asr/71891a70-badf-428e-8b95-003da3c1f94d_2.fd8c095ffd82c757a1a5500b7c1291b5.png?odnHeight=450&odnWidth=450&odnBg=FFFFFF" width=120 height=120></a>
-<br>
-  <a href="https://shwin320.github.io/TechHelp/Alexa" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Amazon_Alexa_App_Logo.png/170px-Amazon_Alexa_App_Logo.png" width=120 height=120></a>
-<br>
-  <a href="https://support.apple.com/guide/watch/welcome/watchos" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/I/51UNF6-JAUL._SX569_.jpg" width=120 height=120></a>
+<a href="https://shwin320.github.io/TechHelp/Galaxy_Watch"><img src="https://i5.walmartimages.com/asr/71891a70-badf-428e-8b95-003da3c1f94d_2.fd8c095ffd82c757a1a5500b7c1291b5.png?odnHeight=450&odnWidth=450&odnBg=FFFFFF" width=120 height=120></a>
+<a href="https://shwin320.github.io/TechHelp/Alexa"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Amazon_Alexa_App_Logo.png/170px-Amazon_Alexa_App_Logo.png" width=120 height=120></a>
+<a href="https://support.apple.com/guide/watch/welcome/watchos"><img src="https://images-na.ssl-images-amazon.com/images/I/51UNF6-JAUL._SX569_.jpg" width=120 height=120></a>
 </div>
 </body>
 </html>
