--- a/TechHelp/Alexa.html
+++ b/TechHelp/Alexa.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/TechHelp@68a28aa/TechHelp.css">
 </head>
 <body>
+<a href="https://shwin320.github.io/TechHelp/">Return to Home</a>
 <h1>TechHelp</h1>
 <br>
 <h2>Amazon Alexa</h2>
