--- a/TechHelp/Galaxy_Watch.html
+++ b/TechHelp/Galaxy_Watch.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>TechHelp</h1>
+<a href="https://shwin320.github.io/TechHelp/">Return to Home</a>
 <br>
 <h2>Galaxy Watch</h2>
 <br><br><br><br>
