--- a/TechHelp/Galaxy_Watch.html
+++ b/TechHelp/Galaxy_Watch.html
@@ -12,8 +12,8 @@
 <br><br><br><br>
 <a href="https://www.samsung.com/global/galaxy/galaxy-watch/" target="_blank">Galaxy Watch Overview</a>
 <br>
-<a href="http://org.downloadcenter.samsung.com/downloadfile/ContentsFile.aspx?CDSite=US&CttFileID=7084092&CDCttType=UM&ModelType=C&ModelName=SM-R800NZSAXAR&VPath=UM/201808/20180807044345291/WEA_Galaxy_Watch_EN_IBG_TZ4_072318_Final.pdf" target="_blank">Quick Start Guide</a>
+<a href="http://org.downloadcenter.samsung.com/downloadfile/ContentsFile.aspx?CDSite=US&CttFileID=7084092&CDCttType=UM&ModelType=C&ModelName=SM-R800NZSAXAR&VPath=UM/201808/20180807044345291/WEA_Galaxy_Watch_EN_IBG_TZ4_072318_Final.pdf" target="_blank">Galaxy Watch Quick Start Guide</a>
 <br>
-<a href="http://org.downloadcenter.samsung.com/downloadfile/ContentsFile.aspx?CDSite=US&CttFileID=7128846&CDCttType=PM&ModelType=C&ModelName=SM-R800NZSAXAR&VPath=PM/201809/20180925061243455/EB/WEA_Watch_EN_FINAL_180816/start_here.html" target="_blank">User Manual</a>
+<a href="http://org.downloadcenter.samsung.com/downloadfile/ContentsFile.aspx?CDSite=US&CttFileID=7128846&CDCttType=PM&ModelType=C&ModelName=SM-R800NZSAXAR&VPath=PM/201809/20180925061243455/EB/WEA_Watch_EN_FINAL_180816/start_here.html" target="_blank">Galaxy Watch User Manual</a>
 </body>
 </html>
