--- a/TechHelp/Alexa.html
+++ b/TechHelp/Alexa.html
@@ -14,6 +14,10 @@
 <br>
 <a href="https://www.amazon.com/gp/help/customer/display.html/ref=hp_bc_nav?ie=UTF8&nodeId=201952240" target="_blank">More Alexa Features</a>
 <br>
+<a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201549940" target="_blank>Alexa App Basics</a>
+<br>
+<a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201601980" target="_blank">Alexa App Settings</a>
+<br>
 <a href="https://www.amazon.com/gp/help/customer/display.html/ref=hp_200127470_echo_dot_img?nodeId=202010090" target="_blank">Echo Dot Support</a>
 <br>
 <a href="https://www.amazon.com/gp/help/customer/display.html/ref=hp_bc_nav?ie=UTF8&nodeId=G2GGU9S7P53FBCW5" target="_blank">Fire TV Cube Support</a>
