--- a/Locker/index.html
+++ b/Locker/index.html
@@ -1,8 +1,30 @@
 <html>
 <head>
 <title>Locker</title>
+<style>
+  p{
+	font-family: Arial;
+	font-size: 16px;
+}
+a{
+	text-decoration: none;
+	color: rgb(0, 195, 255);
+}
+a:hover{
+	opacity: 0.5;
+	text-decoration: underline;
+}
+  </style>
 </head>
 <body>
 <h1 style="text-align: Center; font-family: Arial;">Welcome to Locker!</h1>
+<h2 style="font-family: Arial;">Links:</h2>
+  <a href="https://shwin320.github.io/Locker/OneLocker" target="_blank">OneLocker</a>
+  <br>
+  <a href="https://shwin320.github.io/Locker/Virtual-Locker" target="_blank">Virtual Locker</a>
+  <br>        
+  <a href="https://shwin320.github.io/Locker/Virtual-Locker/A+ School" target="_blank">A+ School</a>
+  <br>        
+  <a href="https://shwin320.github.io/Locker/Virtual-Locker/Thomas Media Center" target="_blank">Thomas Media Center</a>
 </body>
 </html>
