--- a/Locker/index.html
+++ b/Locker/index.html
@@ -13,17 +13,20 @@ a:hover{
 	opacity: 0.5;
 	text-decoration: underline;
 }
+.tab{
+	margin-left: 40px;
+}
   </style>
 </head>
 <body>
 <h1 style="text-align: Center; font-family: Arial;">Welcome to Locker!</h1>
 <h2 style="font-family: Arial;">Links:</h2>
   <a href="https://shwin320.github.io/Locker/OneLocker" target="_blank">OneLocker</a>
-  <br><p>        <p>
+  <br>
   <a href="https://shwin320.github.io/Locker/Virtual-Locker" target="_blank">Virtual Locker</a>
-<br><p>        </p>
-  <a href="https://shwin320.github.io/Locker/Virtual-Locker/A+ School" target="_blank">A+ School</a>
-<br><p>        </p>
-  <a href="https://shwin320.github.io/Locker/Virtual-Locker/Thomas Media Center" target="_blank">Thomas Media Center</a>
+<br>
+  <a href="https://shwin320.github.io/Locker/Virtual-Locker/A+ School" target="_blank" class="tab">A+ School</a>
+<br>
+  <a href="https://shwin320.github.io/Locker/Virtual-Locker/Thomas Media Center" target="_blank" class="tab">Thomas Media Center</a>
 </body>
 </html>
