--- a/index.html
+++ b/index.html
@@ -66,26 +66,26 @@
 <h2>Links:</h2>
 <a href="#Mini Bio">Mini Bio</a>
 <br>
-<a href="#Bookmarks">Websites</a>
+<a href="#Websites">Websites</a>
 <br>
 <a href="#Contact Info">Contact Info</a>
 <br>
 <ul id="Mini Bio">
 <h2>Mini Bio:</h2>
 <br><br>
-<p>Ashwin Thomas was born on Palm Sunday. He's the oldest child in his family. He likes technology. He's really smart, and in his school's AT class. He learned coding on Khan Academy.</p>
+<p>Ashwin Thomas was born on March 20th. He's the oldest child in his family. He likes technology. He has interest in the field of STEM. He's really smart, being in honors classes a=nd in the gifted program. He originally learned coding on Khan Academy.</p>
 </ul>
 <br><br>
-<ul id="Bookmarks">
-<h2>Websites:</h2>
+<ul id="Websites">
+<h2>My Websites:</h2>
 <br><br>
 <a href="https://shwin320.github.io/Locker">Locker</a><br>
 <a style="text-indent: 50px;" href="https://shwin320.github.io/Locker/Virtual-Locker">Virtual Locker</a><br>
 <a style="text-indent: 100px;" href="https://shwin320.github.io/Locker/School">A+ School</a><br>
 <a style="text-indent: 100px;" href="https://shwin320.github.io/Locker/Media">Thomas Media Center</a><br>
 <a style="text-indent: 50px;" href="https://shwin320.github.io/Locker/OneLocker">OneLocker (on Locker)</a><br>
-<a style="text-indent: 50px;" href="https://shwin320.github.io/OneLocker">OneLocker</a>
-<a style="text-indent: 100px;" href="https://shwin320.github.io/OneLocker/School">OneLocker School</a>
+<a style="text-indent: 50px;" href="https://shwin320.github.io/OneLocker">OneLocker</a><br>
+<a style="text-indent: 100px;" href="https://shwin320.github.io/OneLocker/School">OneLocker School</a><br>
 <a style="text-indent: 100px;" href="https://shwin320.github.io/OneLocker/Preview">OneLocker (Preview)</a>
 <br><br>
 <ul id="Contact Info">
