--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 font-size:20px;
             }
             
+            .tab{
+                margin-left: 40px;
+            }
+            
             </style>
     </head>
     <body>
@@ -80,13 +84,14 @@
 <h2>My Websites:</h2>
 <br><br>
 <a href="https://shwin320.github.io/Locker">Locker</a><br>
-<a style="text-indent: 50px;" href="https://shwin320.github.io/Locker/Virtual-Locker">Virtual Locker</a><br>
-<a style="text-indent: 100px;" href="https://shwin320.github.io/Locker/School">A+ School</a><br>
-<a style="text-indent: 100px;" href="https://shwin320.github.io/Locker/Media">Thomas Media Center</a><br>
-<a style="text-indent: 50px;" href="https://shwin320.github.io/Locker/OneLocker">OneLocker (on Locker)</a><br>
-<a style="text-indent: 50px;" href="https://shwin320.github.io/OneLocker">OneLocker</a><br>
-<a style="text-indent: 100px;" href="https://shwin320.github.io/OneLocker/School">OneLocker School</a><br>
-<a style="text-indent: 100px;" href="https://shwin320.github.io/OneLocker/Preview">OneLocker (Preview)</a>
+<a href="https://shwin320.github.io/Locker/Virtual-Locker">Virtual Locker</a><br>
+<a class="tab" href="https://shwin320.github.io/Locker/School">A+ School</a><br>
+<a class="tab" href="https://shwin320.github.io/Locker/Media">Thomas Media Center</a><br>
+<a class="tab" shref="https://shwin320.github.io/Locker/OneLocker">OneLocker (on Locker)</a><br>
+<a href="https://shwin320.github.io/OneLocker">OneLocker</a><br>
+<a class="tab" href="https://shwin320.github.io/OneLocker/School">OneLocker School</a><br>
+<a class="tab" href="https://shwin320.github.io/OneLocker/Preview">OneLocker (Preview)</a><br>
+<a href="https://www.khanacademy.org/profile/athomas5149/projects">Khan Academy Projects</a>
 <br><br>
 <ul id="Contact Info">
 <h2>Contact info</h2>
