--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
 <a href="https://www.khanacademy.org/profile/athomas5149/projects">Khan Academy Projects</a>
 <br><br>
 <ul id="Contact Info">
-<h2>Contact info</h2>
-<br><br>
-<a href="mailto:shwin320@gmail.com">shwin320@gmail.com</a>
+    <h2>--<a href="mailto:shwin320@gmail.com">shwin320@gmail.com</a></h2>
 <br>
 </ul>
     </body>
