--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <a href="https://www.khanacademy.org/profile/athomas5149/projects">Khan Academy Projects</a>
 <br><br>
 <ul id="Contact Info">
-    <h2>--<a href="mailto:shwin320@gmail.com">shwin320@gmail.com</a></h2>
+    <h2><a href="mailto:shwin320@gmail.com">Email me at shwin320@gmail.com</a></h2>
 <br>
 </ul>
     </body>
