--- a/index.html
+++ b/index.html
@@ -65,37 +65,7 @@
   ga('send', 'pageview');
 
 </script>
-<h1>Ashwin's  Webpage</h1>
-<br>
-<h2>Links:</h2>
-<a href="#Mini Bio">Mini Bio</a>
-<br>
-<a href="#Websites">Websites</a>
-<br>
-<a href="#Contact Info">Contact Info</a>
-<br>
-<ul id="Mini Bio">
-<h2>Mini Bio:</h2>
-<br><br>
-<p>Ashwin Thomas was born on March 20th. He's the oldest child in his family. He likes technology. He has interest in the field of STEM. He's really smart, being in honors classes a=nd in the gifted program. He originally learned coding on Khan Academy.</p>
-</ul>
-<br><br>
-<ul id="Websites">
-<h2>My Websites:</h2>
-<br><br>
-<a href="https://shwin320.github.io/Locker">Locker</a><br>
-<a href="https://shwin320.github.io/Locker/Virtual-Locker">Virtual Locker</a><br>
-<a class="tab" href="https://shwin320.github.io/Locker/School">A+ School</a><br>
-<a class="tab" href="https://shwin320.github.io/Locker/Media">Thomas Media Center</a><br>
-<a class="tab" shref="https://shwin320.github.io/Locker/OneLocker">OneLocker (on Locker)</a><br>
-<a href="https://shwin320.github.io/OneLocker">OneLocker</a><br>
-<a class="tab" href="https://shwin320.github.io/OneLocker/School">OneLocker School</a><br>
-<a class="tab" href="https://shwin320.github.io/OneLocker/Preview">OneLocker (Preview)</a><br>
-<a href="https://www.khanacademy.org/profile/athomas5149/projects">Khan Academy Projects</a>
-<br><br>
-<ul id="Contact Info">
-    <h2><a href="mailto:shwin320@gmail.com">Email me at shwin320@gmail.com</a></h2>
-<br>
-</ul>
+<h1>Ashwin's Website</h1><br>
+        <h1>Coming 9/3/19</h1>
     </body>
 </html>
